Use JUnit BOM to align JUnit versions (5.11.4)